# back/src/swagger/Tour.yaml
@@ -119,7 +119,7 @@ paths:
       tags:
         - Tour
       summary: 이름으로 랜드마크 검색
-      description: /tour/search?name={name}으로 name이라는 텍스트가 포함된 랜드마크 목록을 불러옵니다.
+      description: /tour/search?name={name}로부터 텍스트가 포함된 랜드마크 목록을 불러옵니다.
       parameters:
         - name: name
           in: query
@@ -130,6 +130,23 @@ paths:
           description: 요청 성공
         "400":
           description: 잘못된 요청이 있을 때 오류가 발생합니다.
+
+  /tour/image:
+    post:
+      tags:
+        - Tour
+      summary: 이미지로 랜드마크 검색(Flask 서버와의 미연동으로 이미지 업로드 성공 여부만 확인)
+      description: /tour/image로 이미지를 업로드하고, 업로드된 이미지와 가장 비슷한 랜드마크 예측 결과를 불러옵니다.
+      requestBody:
+        required: true
+        description: 업로드할 이미지를 req.body로 받습니다.
+        content:
+          multipart/form-data:
+            schema: object
+              properties:
+                imgFile:
+                  type: string
+                  format: binary
 
   /landmark:
     post:
